docs: 更新博客标题和描述为英文版本
将博客标题从“CozyOct1の博客”改为“CozyOct1's Blog”，并移除副标题
将描述从“Talk is cheap. Show me the code.”改为“Code is cheap. Show me the prompt.”

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: CozyOct1の博客
-subtitle: '一个简单的博客'
-description: 'Talk is cheap. Show me the code.'
+title: CozyOct1‘s Blog
+subtitle: ''
+description: 'Code is cheap. Show me the prompt.'
 keywords:
   - 博客
   - 技术
