--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -144,7 +144,7 @@ links:
   desc: 思否
 
 - title: 博客园
-  url: https://home.cnblogs.com/u/CozyOct1  
+  url: https://www.cnblogs.com/CozyOct1
   desc: 博客园
 
 - title: 小红书
